--- a/CSS/style.css
+++ b/CSS/style.css
@@ -104,8 +104,9 @@ padding: 15px;
 	width: 100%;
 	height: 40%;
 	background: url(../img/rome-sunset.jpg);
-	background-size: cover;
+	background-size: contain;
 	overflow: hidden;
+
 } 
 .bodyShadow{
 	width: 100%;
