--- a/CSS/style.css
+++ b/CSS/style.css
@@ -101,9 +101,10 @@ text-align: center;
 padding: 15px;
 }
 .bodyImg{
+	box-sizing: content-box;
 	width: 100%;
 	height: 40%;
-	background: url(../img/rome-sunset.jpg);
+	background: url(../img/rome-sunset.jpg) no-repeat;
 	background-size: contain;
 	overflow: hidden;
 
