--- a/CSS/style.css
+++ b/CSS/style.css
@@ -121,6 +121,8 @@ border: 1px solid #cccccc ;
 	display: block;
 	position: absolute;
 margin:-5% 0 0 3%; 
+width: 10%;
+height: auto;
 }
 .UserName{
 color: #000000;
