--- a/CSS/style.css
+++ b/CSS/style.css
@@ -103,14 +103,13 @@ padding: 15px;
 .bodyImg{
 	width: 100%;
 	height: 40%;
-	background: url(../img/rome-sunset.jpg) no-repeat;
-	background-size: cover;
+	
 	overflow: hidden;
 
 } 
 .bodyShadow{
 	width: 100%;
-	height: 100%;
+	height: auto;
  
 }
 .bodyButton{
