--- a/CSS/style.css
+++ b/CSS/style.css
@@ -54,7 +54,10 @@ text-align: center;
 
 
 }
+.menu:hover{
+	color: red;
 
+}
 .hederFlex{
 	display: flex;
 	text-align: center;
@@ -72,6 +75,19 @@ text-align: center;
 	border: 3px solid white; 
 	margin: -1% 3% 0% 3%;  
 	padding-top: 3px; 
+}
+.iconSocSet:hover{
+	display: block;
+	background-color: black;
+	border-radius: 24px;
+	box-sizing: border-box;
+	width: 30px;
+	height: 30px; 
+	border: 3px solid white; 
+	margin: -1% 3% 0% 3%;  
+	padding-top: 3px; 
+
+
 }
 .logo{
 position:absolute;
@@ -173,4 +189,7 @@ line-height: normal;
 .myWorkImg{
 	width: 100%;
 	height: auto;
+}
+.myWorkImg:hover{
+	opacity: 0.7;
 }
