--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,58 +32,50 @@ img{vertical-align:top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:400;}
 
 .hederBody{
-	background: black;
-width: 446px;
-height: 14px;
-color: #ffffff;
+	display:flex;
+	background:#2f2730;
+color:#ffff;
 font-family: "Helvetica Neue LT - Condensed";
 font-size: 19px;
-font-weight: 400;
-font-style: normal;
-letter-spacing: normal;
-line-height: 22px;
-text-align: left;
-text-transform: uppercase;
-font-style: normal;
-letter-spacing: normal;
-line-height: normal;
 width: 100%;
-height: auto;
-box-sizing:border-box;
-text-align: center;
-
-
+height: 80px;
+position: fixed;
+z-index: 50;
+justify-content: space-between;
+align-items: center;
+padding-right: 40px;
 }
-
-.hederFlex{
-	display: flex;
-	text-align: center;
-	flex-direction: row-reverse;
-	padding-right: 13%;
-	 
-}
-.iconSocSet{
-	display: block;
-	background-color: red;
-	border-radius: 24px;
-	box-sizing: border-box;
+.heder__burger{
+	display:none;
 	width: 30px;
-	height: 30px; 
-	border: 3px solid white; 
-	margin: -1% 3% 0% 3%;  
-	padding-top: 3px; 
+		height: 20px;
+
+}
+
+.heder__menu ul{
+	display: flex;
+	text-transform: uppercase;
+}
+.heder__menu li{
+margin:0 0 0 20px;
+	
+
+}
+.heder__menu:hover{
+	color:#BC8F8F;
+	
 }
 .logo{
-position:absolute;
-width: 10%;
-height: 16%;
-object-fit: cover;
-box-sizing: border-box;
-background: url(../img/d7vyves-18a6ca58-6382-4ff2-9c1e-c46a5b60c16d.png) no-repeat;
-background-size: contain;
-margin-left: 1%;
+margin-left: 2%;
+ 
 }
+.logo__img{
+width:100px;
+height: auto;
+padding-top: 30px;
 
+
+}
 
 .bodyTop{
 color: #000000;
@@ -99,6 +91,7 @@ letter-spacing: normal;
 line-height: normal;
 text-align: center;
 padding: 15px;
+padding-top: 100px;
 }
 .bodyImg{
 	width: 100%;
@@ -144,20 +137,17 @@ line-height: normal;
 	border: 1px solid #cccccc ;
 	padding: 20px;
 }
+
 .foterLeft{
 	width: 40%;
 color: #585555;
 font-family: "Helvetica CE";
 font-size: 16px;
-font-style: normal;
-letter-spacing: normal;
 line-height: 22px;
-text-align: justifyLeft;
-font-style: normal;
-letter-spacing: normal;
-line-height: normal;
+padding: 20px;
+
 }
-.futerRight{
+.foterRight{
 	max-width: 60%;
 
 }
@@ -174,3 +164,96 @@ line-height: normal;
 	width: 100%;
 	height: auto;
 }
+.myWorkImg:hover{
+	opacity: 0.7;
+}
+@media(max-width:818px){
+	.hederBody{
+		position: fixed;
+		height: 50px;
+		z-index: 7;}
+	.heder__burger{
+		display:block;
+		position:relative;
+		z-index: 3;
+		
+	}
+	.heder__burger span{
+		position: absolute;
+		background-color: #fff;
+		left: 0;
+		width: 100%;
+		height: 2px;
+		top:9px;
+	}
+	.heder__burger:before {
+		content: "";
+		position: absolute;
+		background-color: #fff;
+		width: 100%;
+		height: 2px;
+		left: 0;
+
+	}
+	.heder__burger:after{
+		content: "";
+		position: absolute;
+		background-color: #fff;
+		width: 100%;
+		height: 2px;
+		left: 0;
+
+	}
+	.heder__burger:before{
+		top: 0;
+	}
+	.heder__burger:after{
+		bottom: 0;}
+	.heder__burger.active:before{
+		top:9px;
+		transform: rotate(45deg);
+		transition: all 0.3s ease 0s;
+	}
+	.heder__burger.active:after{
+		bottom:9px;
+		transform: rotate(-45deg);
+		transition: all 0.3s ease 0s;
+	}
+	.heder__burger.active span{
+		transform:scale(0); }
+	.heder__menu{
+		position: fixed;
+		top:-1000px;
+		right: 0;
+		width: 100%;
+		height: 100%;
+		background-color: #2d2a50;
+		z-index: 1;
+		padding: 70px 0 0 0; 
+		text-align: right;}
+
+		.logo{
+			z-index: 3;
+		}
+		.heder__menu ul{
+	display: block;
+	text-transform: uppercase;
+	padding: 20px;}
+	.heder__menu.active{
+		transition: all 0.7s ease 0s;
+		top: 0;
+	}
+	.heder__menu li{
+		padding: 20px;
+	}
+	.footer{
+		display: block;
+	}
+	.foterLeft{
+		width: 100%;
+	}
+	.footerRight{
+		width: 100%;
+	}
+}
+
