--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,11 +51,8 @@ padding-right: 40px;
 		height: 20px;
 
 }
-.menu:hover{
-	color: red;
 
-}
-.hederFlex{
+.heder__menu ul{
 	display: flex;
 	text-transform: uppercase;
 }
@@ -67,19 +64,6 @@ margin:0 0 0 20px;
 .heder__menu:hover{
 	color:#BC8F8F;
 	
-}
-.iconSocSet:hover{
-	display: block;
-	background-color: black;
-	border-radius: 24px;
-	box-sizing: border-box;
-	width: 30px;
-	height: 30px; 
-	border: 3px solid white; 
-	margin: -1% 3% 0% 3%;  
-	padding-top: 3px; 
-
-
 }
 .logo{
 margin-left: 2%;
@@ -272,7 +256,4 @@ padding: 20px;
 		width: 100%;
 	}
 }
-
-
-
 
