--- a/CSS/style.css
+++ b/CSS/style.css
@@ -76,8 +76,7 @@ padding-top: 30px;
 
 
 }
-
-.bodyTop{
+.BodyTop{
 color: #000000;
 font-family: "Perpetua Titling MT";
 font-size: 23px;
@@ -93,6 +92,7 @@ text-align: center;
 padding: 15px;
 padding-top: 100px;
 }
+
 .bodyImg{
 	width: 100%;
 	height: auto;
@@ -139,30 +139,37 @@ font-style: normal;
 letter-spacing: normal;
 line-height: normal;
 }
-.footer{
+.Body{
 	display: flex;
 	border: 1px solid #cccccc ;
 	padding: 20px;
 }
 
 .foterLeft{
-	width: 40%;
+	width: 60%;
 color: #585555;
 font-family: "Helvetica CE";
 font-size: 16px;
 line-height: 22px;
 padding: 20px;
-
+border: 1px solid #cccccc ;
 }
 .AboutMe{
 	font-size: 20px;
 	margin-bottom: 20px;
+	border: 1plid #cccccc ;
 
 }
 .foterRight{
-	max-width: 60%;
+	width: 30%;x so
+
+	
 
 
+}
+.TitleProject{
+	margin: 20px;
+	
 }
 .myFirstProgect{
 	display: flex;
@@ -259,7 +266,7 @@ padding: 20px;
 	.heder__menu li{
 		padding: 20px;
 	}
-	.footer{
+	.Body{
 		display: block;
 	}
 	.foterLeft{
@@ -269,7 +276,25 @@ padding: 20px;
 		width: 100%;
 	}
 }
+.bodyTop{
+	height: 90%;
+color: #000000;
+font-family: "Perpetua Titling MT";
+font-size: 23px;
+font-weight: 300;
+font-style: normal;
+letter-spacing: normal;
+line-height: 22px;
+text-align: left;
+font-style: normal;
+letter-spacing: normal;
+line-height: normal;
+text-align: center;
+padding: 15px;
+padding-top: 100px;
+}
 .body__last__progect{
+	height: 90%;
 	padding: 100px;
 text-align: center;
 color: #000000;
@@ -280,6 +305,7 @@ letter-spacing: normal;
 line-height: 22px;
 }
 .kontakt__body{
+	height: 90%;
 	padding: 100px;
 text-align: center;
 color: #000000;
@@ -289,7 +315,21 @@ font-style: normal;
 letter-spacing: normal;
 line-height: 22px;
 }
+.DawnSite{
+	display: block;
+	background:#2f2730;
+color:#ffff;
+font-family: "Helvetica Neue LT - Condensed";
+font-size: 19px;
+width: 100%;
+height: 40px;
+padding: 0 auto;
 
+}
+.year{
+display: block;
+text-align:  center;
 
+}
 
 
