--- a/CSS/style.css
+++ b/CSS/style.css
@@ -31,162 +31,134 @@ ul li {list-style:none;}
 img{vertical-align:top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:400;}
 
+.AvatarJs{
+	width: 100%;
+	height: 100vh;
+	display: none;
+	position: absolute;
+	transition: 2s;
+	background: rgba(128,128,128,0.7);}
+	.avatar1{
+			display: block;
+			margin: auto;
+			height:100%;
+			cursor: pointer;
+			border-radius: 10%;
+			box-shadow: 10px 5px 5px black;
+			 }
+	.AvatarJs.FullScreen{
+		display: block;
+		z-index: 11;
+	}
+
+	
 .hederBody{
 	display:flex;
 	background:#2f2730;
-color:#ffff;
-font-family: "Helvetica Neue LT - Condensed";
-font-size: 19px;
-width: 100%;
-height: 80px;
-position: fixed;
-z-index: 50;
-justify-content: space-between;
-align-items: center;
-padding-right: 40px;
-}
-.heder__burger{
-	display:none;
-	width: 30px;
-		height: 20px;
-
-}
-
-.heder__menu ul{
-	display: flex;
-	text-transform: uppercase;
-}
-.heder__menu li{
-margin:0 0 0 20px;
-	
-
-}
-.heder__menu:hover{
-	color:#BC8F8F;
-	
-}
-.logo{
-margin-left: 2%;
- 
-}
-.logo__img{
-width:100px;
-height: auto;
-padding-top: 30px;
-
-
-}
-.BodyTop{
-color: #000000;
-font-family: "Perpetua Titling MT";
-font-size: 23px;
-font-weight: 300;
-font-style: normal;
-letter-spacing: normal;
-line-height: 22px;
-text-align: left;
-font-style: normal;
-letter-spacing: normal;
-line-height: normal;
-text-align: center;
-padding: 15px;
-padding-top: 100px;
-}
-
-.bodyImg{
+	color:#ffff;
+	font-family: "Helvetica Neue LT - Condensed";
+	font-size: 19px;
 	width: 100%;
-	height: auto;
-	
-	overflow: hidden;
-
-} 
-.bodyShadow{
-	width: 100%;
-	height: auto;
- 
-}
-.bodyButton{
-text-align: center;
-border: 1px solid #cccccc ;
-}
-.avatar{
-	display: block;
-	position: absolute;
-margin:-30% 0 0 3%; 
-width: 19%;
-height: auto;
-border-radius: 10%;
-box-shadow: 10px 5px 5px black; }
-.avatar:hover{
-	width: 29%;
-	margin:-30% 0 0 10%; 
-
-
-}
-.UserName{
-color: #000000;
-font-family: "Helvetica Neue";
-font-size: 22px;
-font-style: normal;
-letter-spacing: normal;
-line-height: 22px;
-
-}
-.LevelSkill{
-font-family: "Helvetica Neue";
-font-size: 20px;
-font-style: normal;
-letter-spacing: normal;
-line-height: normal;
-}
-.Body{
-	display: flex;
-	border: 1px solid #cccccc ;
-	padding: 20px;
-}
-
-.foterLeft{
-	width: 60%;
-color: #585555;
-font-family: "Helvetica CE";
-font-size: 16px;
-line-height: 22px;
-padding: 20px;
-border: 1px solid #cccccc ;
-}
-.AboutMe{
-	font-size: 20px;
-	margin-bottom: 20px;
-	border: 1plid #cccccc ;
-
-}
-.foterRight{
-	width: 30%;x so
-
-	
-
-
-}
-.TitleProject{
-	margin: 20px;
-	
-}
-.myFirstProgect{
-	display: flex;
-
-}
-.myWork{
-	width: 50%;
-	height: auto;
-
-}
-.myWorkImg{
-	width: 100%;
-	height: auto;
-}
-.myWorkImg:hover{
-	opacity: 0.7;
-}
+	height: 80px;
+	position: fixed;
+	z-index: 10;
+	justify-content: space-between;
+	align-items: center;
+	padding-right: 40px;}
+	.heder__burger{
+		display:none;
+		width: 30px;
+		height: 20px;}
+		.heder__menu ul{
+			display: flex;
+			text-transform: uppercase;}
+		.heder__menu li{
+			margin:0 0 0 20px;}
+		.heder__menu:hover{
+			color:#BC8F8F;}
+	.logo{
+		margin-left: 2%;}
+		.logo__img{
+			width:100px;
+			height: auto;
+			padding-top: 30px;}
+	.BodyTop{
+		color: #000000;
+		font-family: "Perpetua Titling MT";
+		font-size: 23px;
+		font-weight: 300;
+		font-style: normal;
+		letter-spacing: normal;
+		line-height: 22px;
+		text-align: left;
+		font-style: normal;
+		letter-spacing: normal;
+		line-height: normal;
+		text-align: center;
+		padding: 15px;
+		padding-top: 100px;}
+			.bodyImg{
+				width: 100%;
+				height: auto;
+				overflow: hidden;} 
+			.bodyShadow{
+				width: 100%;
+				height: auto;}
+	.bodyButton{
+		text-align: center;
+		border: 1px solid #cccccc ;}
+		.avatar{
+			display: block;
+			position: absolute;
+			margin:-30% 0 0 3%; 
+			width: 19%;
+			height: auto;
+			border-radius: 10%;
+			box-shadow: 10px 5px 5px black;
+			cursor:pointer; }
+		.UserName{
+			color: #000000;
+			font-family: "Helvetica Neue";
+			font-size: 22px;
+			font-style: normal;
+			letter-spacing: normal;
+			line-height: 22px;}
+		.LevelSkill{
+			font-family: "Helvetica Neue";
+			font-size: 20px;
+			font-style: normal;
+			letter-spacing: normal;
+			line-height: normal;}
+	.Body{
+		display: flex;
+		border: 1px solid #cccccc ;
+		padding: 20px;}
+		.foterLeft{
+			width: 60%;
+			color: #585555;
+			font-family: "Helvetica CE";
+			font-size: 16px;
+			line-height: 22px;
+			padding: 20px;
+			border: 1px solid #cccccc ;}
+			.AboutMe{
+				font-size: 20px;
+				margin-bottom: 20px;
+				border: 1plid #cccccc ;}
+		.foterRight{
+			width: 30%;}
+			.TitleProject{
+				margin: 20px;}
+			.myFirstProgect{
+				display: flex;}
+				.myWork{
+					width: 50%;
+					height: auto;}
+				.myWorkImg{
+					width: 100%;
+					height: auto;}
+					.myWorkImg:hover{
+						opacity: 0.7;}
 @media(max-width:818px){
 	.hederBody{
 		position: fixed;
@@ -195,26 +167,21 @@ border: 1px solid #cccccc ;
 	.heder__burger{
 		display:block;
 		position:relative;
-		z-index: 3;
-		
-	}
+		z-index: 3;}
 	.heder__burger span{
 		position: absolute;
 		background-color: #fff;
 		left: 0;
 		width: 100%;
 		height: 2px;
-		top:9px;
-	}
+		top:9px;}
 	.heder__burger:before {
 		content: "";
 		position: absolute;
 		background-color: #fff;
 		width: 100%;
 		height: 2px;
-		left: 0;
-
-	}
+		left: 0;}
 	.heder__burger:after{
 		content: "";
 		position: absolute;
@@ -256,9 +223,9 @@ border: 1px solid #cccccc ;
 			z-index: 3;
 		}
 		.heder__menu ul{
-	display: block;
-	text-transform: uppercase;
-	padding: 20px;}
+			display: block;
+			text-transform: uppercase;
+			padding: 20px;}
 	.heder__menu.active{
 		transition: all 0.7s ease 0s;
 		top: 0;
@@ -266,12 +233,6 @@ border: 1px solid #cccccc ;
 	.heder__menu li{
 		padding: 20px;
 	}
-	.avatar:hover{
-	width: 59%;
-	margin:-30% 0 0 10%; 
-
-
-}
 	.Body{
 		display: block;
 	}
@@ -282,60 +243,53 @@ border: 1px solid #cccccc ;
 		width: 100%;
 	}
 }
-.bodyTop{
-	height: 90%;
-color: #000000;
-font-family: "Perpetua Titling MT";
-font-size: 23px;
-font-weight: 300;
-font-style: normal;
-letter-spacing: normal;
-line-height: 22px;
-text-align: left;
-font-style: normal;
-letter-spacing: normal;
-line-height: normal;
-text-align: center;
-padding: 15px;
-padding-top: 100px;
-}
-.body__last__progect{
-	height: 90%;
-	padding: 100px;
-text-align: center;
-color: #000000;
-font-family: "Helvetica Neue";
-font-size: 22px;
-font-style: normal;
-letter-spacing: normal;
-line-height: 22px;
-}
-.kontakt__body{
-	height: 90%;
-	padding: 100px;
-text-align: center;
-color: #000000;
-font-family: "Helvetica Neue";
-font-size: 22px;
-font-style: normal;
-letter-spacing: normal;
-line-height: 22px;
-}
+	.bodyTop{
+		height: 90%;
+		color: #000000;
+		font-family: "Perpetua Titling MT";
+		font-size: 23px;
+		font-weight: 300;
+		font-style: normal;
+		letter-spacing: normal;
+		line-height: 22px;
+		text-align: left;
+		font-style: normal;
+		letter-spacing: normal;
+		line-height: normal;
+		text-align: center;
+		padding: 15px;
+		padding-top: 100px;}
+	.body__last__progect{
+		height: 90%;
+		padding: 100px;
+		text-align: center;
+		color: #000000;
+		font-family: "Helvetica Neue";
+		font-size: 22px;
+		font-style: normal;
+		letter-spacing: normal;
+		line-height: 22px;}
+	.kontakt__body{
+		height: 90%;
+		padding: 100px;
+		text-align: center;
+		color: #000000;
+		font-family: "Helvetica Neue";
+		font-size: 22px;
+		font-style: normal;
+		letter-spacing: normal;
+		line-height: 22px;}
 .DawnSite{
 	display: block;
 	background:#2f2730;
-color:#ffff;
-font-family: "Helvetica Neue LT - Condensed";
-font-size: 19px;
-width: 100%;
-height: 40px;
-padding: 0 auto;
-
-}
-.year{
-display: block;
-text-align:  center;
-
-}
+	color:#ffff;
+	font-family: "Helvetica Neue LT - Condensed";
+	font-size: 19px;
+	width: 100%;
+	height: 40px;
+	padding: 0 auto;}
+	.year{
+	display: block;
+	text-align:  center;}
 
 
